:bug: fix: overlapping elements
  1. The Github Ribbon could overlap library radios at some screenwidths
     so this was fixed.
  2. The radio labels are clickable, while the radio inputs are hidden.
     The inputs weren't being hidden enough so they could still be
     accidentally clicked. Now they are fully hidden.

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -142,20 +142,24 @@ iframe[scrolling='no'] {
 }
 .header {
   text-align: center;
-  margin: 0 16px;
-  border: 1px solid transparent;
+  padding: 0 42px;
   -ms-flex-preferred-size: auto;
       flex-basis: auto;
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
   -ms-flex-negative: 0;
-      flex-shrink: 0
+      flex-shrink: 0;
+
+  /* prevents the github ribbon from leaking out
+     of the header and overlapping form inputs */
+  overflow: hidden;
+  position: relative
 }
 @media (min-width: 500px) {
   .header {
-    margin-top: 6px;
-    margin-bottom: 6px;
+    padding-top: 6px;
+    padding-bottom: 6px;
   }
   }
 .title {
@@ -224,40 +228,39 @@ iframe[scrolling='no'] {
   background-color: #111111;
   color: white;
 }
-input[type="radio"] {
-  opacity: 0;
-  position: absolute
+.selection-bar input[type="radio"] {
+  display: none;
 }
-input[type="radio"]:checked {/* library-specific colors */
+.selection-bar input[type="radio"]:checked {/* library-specific colors */
 }
-input[type="radio"]:checked + label {
+.selection-bar input[type="radio"]:checked + label {
   background-color: #111111;
 }
-input[type="radio"]:checked + .label-css {
+.selection-bar input[type="radio"]:checked + .label-css {
   color: #16A1DC;
 }
-input[type="radio"]:checked + .label-vanillajs {
+.selection-bar input[type="radio"]:checked + .label-vanillajs {
   color: #F0DB4F;
 }
-input[type="radio"]:checked + .label-p5 {
+.selection-bar input[type="radio"]:checked + .label-p5 {
   color: #EC245E;
 }
-input[type="radio"]:checked + .label-greensock {
+.selection-bar input[type="radio"]:checked + .label-greensock {
   color: #88CE02;
 }
-input[type="radio"]:checked + .label-jquery {
+.selection-bar input[type="radio"]:checked + .label-jquery {
   color: #0769AD;
 }
-input[type="radio"]:checked + .label-velocity {
+.selection-bar input[type="radio"]:checked + .label-velocity {
   color: #FFFFFF;
 }
-input[type="radio"]:checked + .label-webanimations {
+.selection-bar input[type="radio"]:checked + .label-webanimations {
   color: #E44D26;
 }
-input[type="radio"]:checked + .label-smil {
+.selection-bar input[type="radio"]:checked + .label-smil {
   color: #FFB13B;
 }
-input[type="radio"]:checked + .label-mojs {
+.selection-bar input[type="radio"]:checked + .label-mojs {
   color: #613961;
 }
 .demo-frame {
